--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Spaghetti Alla Carbonara </title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <p>Below is a list of recipes. Click the links to check them out!</p>
-    <a href="../odin-recipes/recipes/spaghetti.html">Spaghetti Alla Carbonara</a>
-
+    <h1>Spaghetti Alla Carbonara</h1>
 </body>
 </html>
