Add Solyanka link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>Odin Recipes</h1>
 
     <p>Below is a list of recipes. Click the links to check them out!</p>
-    <a href="../odin-recipes/recipes/spaghetti.html">Spaghetti Alla Carbonara</a>
-
+    <ul>
+        <li><a href="../odin-recipes/recipes/spaghetti.html">Spaghetti Alla Carbonara</a></li> 
+        <li><a href="../odin-recipes/recipes/solyanka.html">Solyanka</a></li> 
+    </ul>
 </body>
 </html>
