--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>My Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>My Recipes</h1>
 
     <p>Below is a list of recipes. Click the links to check them out!</p>
     <ul>
         <li><a href="../odin-recipes/recipes/spaghetti.html">Spaghetti Alla Carbonara</a></li> 
         <li><a href="../odin-recipes/recipes/solyanka.html">Solyanka</a></li> 
+        <li><a href="../odin-recipes/recipes/smoothie.html">Strawberry Banana Smoothie</a></li>
     </ul>
 </body>
 </html>
