Change description list to unordered list

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -12,8 +12,7 @@
         <summary>Tasty bacon and noodles!</summary>
         <p>Spaghetti alla carbonara is a traditional Italian recipe and every time you make this dish, it gets better and better. Crispy, tender in the middle, guanciale is mixed with spaghetti and a homemade peppery, pecorino-filled carbonara sauce. My original recipe has become very popular across the globe as we try to set the record straight: <strong>NO CREAM!</strong> This spaghetti alla carbonara is my 2021 version.</p>
         
-        <dt><h3>Ingredients</h3></dt>
-        <dd>
+        <h3>Ingredients</h3>
          <ul>
                 <li>300g/10.5oz spaghetti <em>quadrati</em></li>
                 <li>200g/7oz pecorino Romano cheese</li> 
@@ -22,10 +21,9 @@
                 <li>Black pepper</li>  
          </ul>
 
-        </dd>
 
         <h3>Steps</h3>
-        <ol>
+        <ol type="I">
             <li>Start by removing the skin of the guanciale – not the fat, just the skin. (I really hope you can find the guanciale because it makes the dish sing!)</li>
             <li>While you are cutting the pork, bring 5L of water to a boil. No need for salt in this recipe! The pecorino cheese is salty enough.</li>
             <li>Cut the guanciale into large strips then smaller ones all with fat on each side and delicious meat in the middle. When it cooks, it will be crispy on the outside and nice and tender on the inside.</li>
